--- a/Webpage/templates/admin/people.html
+++ b/Webpage/templates/admin/people.html
@@ -122,7 +122,7 @@
         <a name="people"></a>
         <div class="container people">
             <div class="container">
-                <button type="button" data-bs-toggle="modal" data-bs-target="#peopleEditModal" id="newPersonButton"><i class="fa-solid fa-user-plus" style="padding-left: 5px;padding-right: 5px;"></i> Add new tenant person</button>
+                <button type="button" data-bs-toggle="modal" data-bs-target="#peopleEditModal" id="newPersonButton"><i class="fa-solid fa-user-plus" style="padding-left: 5px;padding-right: 5px;"></i> Add New Tenant...</button>
             </div>
             <div class="container table-responsive-lg" id="render_peopleTable">
                 
