--- a/Webpage/templates/admin/properties.html
+++ b/Webpage/templates/admin/properties.html
@@ -99,7 +99,7 @@
         <a name="properties"></a>
         <div class="container properties">
             <div class="container">
-                <button type="button" data-bs-toggle="modal" data-bs-target="#propertyEditModal" id="newPropertyButton">Add New Property</button>
+                <button type="button" data-bs-toggle="modal" data-bs-target="#propertyEditModal" id="newPropertyButton"><i class="fa-solid fa-house-chimney" style="padding-left: 5px;padding-right: 5px;"></i> Add New Property...</button>
             </div>
             <div class="container table-responsive-lg" id="render_propertiesTable">
                 
@@ -187,7 +187,7 @@
             <div class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable">
               <div class="modal-content">
                 <div class="modal-header">
-                  <h5 class="modal-title" id="staticBackdropLabel">Add New Property</h5>
+                  <h5 class="modal-title" id="staticBackdropLabel"><i class="fa-solid fa-house-chimney" style="padding-left: 5px;padding-right: 5px;"></i> Add New Property</h5>
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
